fixed submit button, legend spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,41 +1,38 @@
-  h1{
-    width: 100%;
-    text-align: center;
-    font-size: 2.5em;
-  }
-  fieldset{
-    border: black solid;
-	text-align: center;
-	height: 300px;
-  }
-  legend{
-	  font-size: 1.5em;
-  }
-  body{
-    font: 16px;
-  }
-  div{
-    font-size: 1.5em;
-    height: 100px;	
-  }
-  label{
-	display: block;
-    float: left;
-    box-sizing: border-box;
-    width: 100%;
-    height: 30%;	
-  }
-  input{
-    width: 100%;
-    height: 40%;	
-  }
+h1{
+  width: 100%;
+  text-align: center;
+  font-size: 2.5em;
+}
+legend{
+  font-size: 1.5em;
+  text-align: center;
+  position: relative;
+  left: 43%;
+  margin: 2%;
+}
+body{
+  font: 16px;
+  text-align: center;
+}
+div{
+  font-size: 1.5em;
+  height: 100px;	
+}
+label{
+  display: block;
+  float: left;
+  box-sizing: border-box;
+  width: 100%;
+  height: 30%;	
+}
+input{
+  width: 100%;
+  height: 40%;	
+}
 
 
 @media screen and (min-width: 620px){
-  fieldset{
-	height: 400px;
-  }
-  label{
+label{
     width: 10%;
 	position: relative;
     left: 20%;	
@@ -43,4 +40,9 @@
   input{
     width: 40%;
   }
+  #submit-button{
+    position: relative;
+	right: 1%;
+  }
 }
+
